# cfaker

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
include/: cfaker.h  cfaker_format.h  cfaker_locale.h  cfaker_random.h
include/providers/: cfaker_bank.h  cfaker_book.h  cfaker_card.h  cfaker_color.h  cfaker_company.h  cfaker_datetime.h  cfaker_internet.h  cfaker_job.h  cfaker_number.h  cfaker_person.h  cfaker_phone.h  cfaker_uuid.h
include/providers/data/: cfaker_bank_data.h  cfaker_book_data.h  cfaker_card_data.h  cfaker_color_data.h  cfaker_company_data.h  cfaker_datetime_data.h  cfaker_internet_data.h  cfaker_job_data.h  cfaker_number_data.h  cfaker_person_data.h  cfaker_phone_data.h
src/: cfaker.c  cfaker_format.c  cfaker_locale.c  cfaker_random.c
src/providers/: cfaker_bank.c  cfaker_book.c  cfaker_card.c  cfaker_color.c  cfaker_company.c  cfaker_datetime.c  cfaker_internet.c  cfaker_job.c  cfaker_number.c  cfaker_person.c  cfaker_phone.c  cfaker_uuid.c
src/providers/data/: cfaker_bank_data.c  cfaker_book_data.c  cfaker_card_data.c  cfaker_color_data.c  cfaker_company_data.c  cfaker_datetime_data.c  cfaker_internet_data.c  cfaker_job_data.c  cfaker_number_data.c  cfaker_person_data.c  cfaker_phone_data.c
test/: CMakeLists.txt  test_bank.c  test_book.c  test_card.c  test_cfaker.c  test_color.c  test_company.c  test_datetime.c  test_format.c  test_internet.c  test_job.c  test_locales.c  test_number.c  test_person.c  test_phone.c  test_random.c  test_uuid.c
