cmake_minimum_required(VERSION 3.10)
project(cfaker_test C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

include_directories(${CMAKE_SOURCE_DIR}/../include ${CMAKE_CURRENT_SOURCE_DIR})

# 添加所有测试文件
add_executable(test_person test_person.c)
add_executable(test_locales test_locales.c)
add_executable(test_format test_format.c)
add_executable(test_cfaker test_cfaker.c)
add_executable(test_random test_random.c)
add_executable(test_number test_number.c)
add_executable(test_bank test_bank.c)
add_executable(test_datetime test_datetime.c)
add_executable(test_job test_job.c)
add_executable(test_color test_color.c)
add_executable(test_phone test_phone.c)
add_executable(test_book test_book.c)
add_executable(test_company test_company.c)

if(MSVC)
    add_compile_options(/W4 /DEBUG)
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
elseif(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
    add_compile_options(-Wall -Wextra -g -std=c11)
endif()

# 链接 cfaker 库
add_subdirectory(${CMAKE_SOURCE_DIR}/.. ${CMAKE_BINARY_DIR}/cfaker_build)
target_link_libraries(test_person PRIVATE cfaker)
target_link_libraries(test_locales PRIVATE cfaker)
target_link_libraries(test_format PRIVATE cfaker)
target_link_libraries(test_cfaker PRIVATE cfaker)
target_link_libraries(test_random PRIVATE cfaker)
target_link_libraries(test_number PRIVATE cfaker)
target_link_libraries(test_bank PRIVATE cfaker)
target_link_libraries(test_datetime PRIVATE cfaker)
target_link_libraries(test_job PRIVATE cfaker)
target_link_libraries(test_color PRIVATE cfaker)
target_link_libraries(test_phone PRIVATE cfaker)
target_link_libraries(test_book PRIVATE cfaker)
target_link_libraries(test_company PRIVATE cfaker)

# 注册所有测试
enable_testing()
add_test(NAME test_person_run COMMAND test_person)
add_test(NAME test_locales_run COMMAND test_locales)
add_test(NAME test_format_run COMMAND test_format)
add_test(NAME test_cfaker_run COMMAND test_cfaker)
add_test(NAME test_random_run COMMAND test_random)
add_test(NAME test_number_run COMMAND test_number)
add_test(NAME test_bank_run COMMAND test_bank)
add_test(NAME test_datetime_run COMMAND test_datetime)
add_test(NAME test_job_run COMMAND test_job)
add_test(NAME test_color_run COMMAND test_color)
add_test(NAME test_phone_run COMMAND test_phone)
add_test(NAME test_book_run COMMAND test_book)
add_test(NAME test_company_run COMMAND test_company)
